habilitando natal para o script 2.2 - versao jupyter

--- a/R/02.2-agrupamento_setor_para_grade_jupyter_multicore_v2.ipynb
+++ b/R/02.2-agrupamento_setor_para_grade_jupyter_multicore_v2.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0dd80d1d-bfcd-45b8-91a9-734f10722c57",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
     "#    \"gua\",       2019,     3518800,\n",
     "    \"mac\",       2019,     2704302,\n",
     "    \"man\",       2019,     1302603,\n",
-    "    # \"nat\",       2019,     2408102,\n",
+    "    \"nat\",       2019,     2408102,\n",
     "#    \"poa\",       2019,     4314902,\n",
     "    \"rec\",       2019,     2611606,\n",
     "    \"rio\",       2019,     3304557,\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f2c4d3ec-17fc-46b0-ab73-c64eb3d5387d",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'bho'</li><li>'cam'</li><li>'cgr'</li><li>'cur'</li><li>'for'</li><li>'goi'</li><li>'mac'</li><li>'man'</li><li>'rec'</li><li>'rio'</li><li>'sal'</li><li>'spo'</li><li>'tsa'</li><li>'jpa'</li><li>'ula'</li><li>'vta'</li><li>'oco'</li><li>'sne'</li><li>'sjc'</li><li>'lda'</li></ol>\n"
+       "<ol class=list-inline><li>'bho'</li><li>'cam'</li><li>'cgr'</li><li>'cur'</li><li>'for'</li><li>'goi'</li><li>'mac'</li><li>'man'</li><li>'nat'</li><li>'rec'</li><li>'rio'</li><li>'sal'</li><li>'spo'</li><li>'tsa'</li><li>'jpa'</li><li>'ula'</li><li>'vta'</li><li>'oco'</li><li>'sne'</li><li>'sjc'</li><li>'lda'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -576,6 +576,7 @@
        "\\item 'goi'\n",
        "\\item 'mac'\n",
        "\\item 'man'\n",
+       "\\item 'nat'\n",
        "\\item 'rec'\n",
        "\\item 'rio'\n",
        "\\item 'sal'\n",
@@ -599,24 +600,25 @@
        "6. 'goi'\n",
        "7. 'mac'\n",
        "8. 'man'\n",
-       "9. 'rec'\n",
-       "10. 'rio'\n",
-       "11. 'sal'\n",
-       "12. 'spo'\n",
-       "13. 'tsa'\n",
-       "14. 'jpa'\n",
-       "15. 'ula'\n",
-       "16. 'vta'\n",
-       "17. 'oco'\n",
-       "18. 'sne'\n",
-       "19. 'sjc'\n",
-       "20. 'lda'\n",
+       "9. 'nat'\n",
+       "10. 'rec'\n",
+       "11. 'rio'\n",
+       "12. 'sal'\n",
+       "13. 'spo'\n",
+       "14. 'tsa'\n",
+       "15. 'jpa'\n",
+       "16. 'ula'\n",
+       "17. 'vta'\n",
+       "18. 'oco'\n",
+       "19. 'sne'\n",
+       "20. 'sjc'\n",
+       "21. 'lda'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1] \"bho\" \"cam\" \"cgr\" \"cur\" \"for\" \"goi\" \"mac\" \"man\" \"rec\" \"rio\" \"sal\" \"spo\"\n",
-       "[13] \"tsa\" \"jpa\" \"ula\" \"vta\" \"oco\" \"sne\" \"sjc\" \"lda\""
+       " [1] \"bho\" \"cam\" \"cgr\" \"cur\" \"for\" \"goi\" \"mac\" \"man\" \"nat\" \"rec\" \"rio\" \"sal\"\n",
+       "[13] \"spo\" \"tsa\" \"jpa\" \"ula\" \"vta\" \"oco\" \"sne\" \"sjc\" \"lda\""
       ]
      },
      "metadata": {},
@@ -630,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "05445dea-fa68-4cc3-b651-e23f1174f58d",
    "metadata": {},
    "outputs": [
@@ -638,14 +640,62 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-01 15:49:37 - Trabalhando na cidade: oco\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: bho\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade bho já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: cam\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cam já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: cgr\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cgr já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: cur\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cur já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: for\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade for já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: goi\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade goi já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: mac\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade mac já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: man\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade man já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: nat\n",
       "\n",
       "\n",
       "\n",
-      "2021-12-01 15:49:38 - 1-5: Começando cálculo de área geral em grade_corrigida em: oco\n",
+      "2021-12-01 17:24:19 - 1-5: Começando cálculo de área geral em grade_corrigida em: nat\n",
       "\n",
       "\n",
-      "mutate: new variable 'area_antes' (double) with 1,390 unique values and 0% NA\n",
+      "mutate: new variable 'area_antes' (double) with 2,734 unique values and 0% NA\n",
       "\n",
       "although coordinates are longitude/latitude, st_intersection assumes that they are planar\n",
       "\n",
@@ -653,27 +703,27 @@
       "“attribute variables are assumed to be spatially constant throughout all geometries”\n",
       "group_by: one grouping variable (id_grade)\n",
       "\n",
-      "summarise: now 1,386 rows and 5 columns, ungrouped\n",
+      "summarise: now 2,734 rows and 5 columns, ungrouped\n",
       "\n",
-      "mutate: new variable 'soma_pop_hm' (integer) with 780 unique values and 0% NA\n",
+      "mutate: new variable 'soma_pop_hm' (integer) with 771 unique values and 0% NA\n",
       "\n",
-      "        new variable 'prop_homens' (double) with 1,098 unique values and 0% NA\n",
+      "        new variable 'prop_homens' (double) with 1,834 unique values and 0% NA\n",
       "\n",
-      "        new variable 'prop_mulheres' (double) with 1,098 unique values and 0% NA\n",
+      "        new variable 'prop_mulheres' (double) with 1,834 unique values and 0% NA\n",
       "\n",
       "left_join: added 6 columns (pop_total, pop_homens, pop_mulheres, prop_homens, prop_mulheres, …)\n",
       "\n",
-      "           > rows only in x       4\n",
+      "           > rows only in x       1\n",
       "\n",
       "           > rows only in y  (    0)\n",
       "\n",
-      "           > matched rows     1,386\n",
+      "           > matched rows     2,734\n",
       "\n",
       "           >                 =======\n",
       "\n",
-      "           > rows total       1,390\n",
+      "           > rows total       2,735\n",
       "\n",
-      "mutate: new variable 'area_depois' (double) with 1,390 unique values and 0% NA\n",
+      "mutate: new variable 'area_depois' (double) with 2,734 unique values and 0% NA\n",
       "\n",
       "mutate: new variable 'prop' (double) with 2 unique values and <1% NA\n",
       "\n",
@@ -686,15 +736,15 @@
       "rename: renamed one variable (area_grade)\n",
       "\n",
       "\n",
-      "2021-12-01 15:49:38 - 2-5: Começando cálculo de área geral em setor em : oco\n",
+      "2021-12-01 17:24:20 - 2-5: Começando cálculo de área geral em setor em : nat\n",
       "\n",
       "\n",
-      "mutate: new variable 'id_setor' (integer) with 943 unique values and 0% NA\n",
+      "mutate: new variable 'id_setor' (integer) with 910 unique values and 0% NA\n",
       "\n",
-      "mutate: new variable 'area_setor' (double) with 943 unique values and 0% NA\n",
+      "mutate: new variable 'area_setor' (double) with 910 unique values and 0% NA\n",
       "\n",
       "\n",
-      "2021-12-01 15:49:39 - 3-5: Começando st_intersection() grade_corrigida vs setor em: oco\n",
+      "2021-12-01 17:24:20 - 3-5: Começando st_intersection() grade_corrigida vs setor em: nat\n",
       "\n",
       "\n",
       "although coordinates are longitude/latitude, st_intersection assumes that they are planar\n",
@@ -702,29 +752,221 @@
       "Warning message:\n",
       "“attribute variables are assumed to be spatially constant throughout all geometries”\n",
       "\n",
-      "2021-12-01 15:49:39 - 4-5: Começando st_make_valid() em: oco\n",
+      "2021-12-01 17:24:21 - 4-5: Começando st_make_valid() em: nat\n",
       "\n",
       "\n",
       "\n",
-      "2021-12-01 15:49:40 - 5-5: Começando cálculo de área do pedaço em: oco\n",
+      "2021-12-01 17:24:22 - 5-5: Começando cálculo de área do pedaço em: nat\n",
       "\n",
       "\n",
       "group_by: one grouping variable (id_setor)\n",
       "\n",
       "ungroup: no grouping variables\n",
       "\n",
-      "mutate: new variable 'pop_mulheres' (double) with 5,264 unique values and 0% NA\n",
+      "mutate: new variable 'pop_mulheres' (double) with 7,765 unique values and 0% NA\n",
       "\n",
-      "        new variable 'pop_homens' (double) with 5,262 unique values and 0% NA\n",
-      "\n",
-      "\n",
-      "2021-12-01 15:49:40 - Finalizado: oco\n",
+      "        new variable 'pop_homens' (double) with 7,756 unique values and 0% NA\n",
       "\n",
       "\n",
-      "2021-12-01 15:49:40 - Trabalhando na cidade: oco\n",
+      "2021-12-01 17:24:22 - Finalizado: nat\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: rec\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade rec já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: rio\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade rio já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: sal\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sal já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: spo\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade spo já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: tsa\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade tsa já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: jpa\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade jpa já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: ula\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade ula já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: vta\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade vta já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: oco\n",
       "\n",
       "\n",
       "Arquivo para a cidade oco já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: sne\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sne já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: sjc\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sjc já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:18 - Trabalhando na cidade: lda\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade lda já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: bho\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade bho já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: cam\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cam já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: cgr\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cgr já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: cur\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade cur já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: for\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade for já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: goi\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade goi já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: mac\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade mac já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: man\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade man já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: nat\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade nat já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: rec\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade rec já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: rio\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade rio já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: sal\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sal já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: spo\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade spo já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: tsa\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade tsa já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: jpa\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade jpa já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: ula\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade ula já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: vta\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade vta já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: oco\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade oco já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: sne\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sne já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: sjc\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade sjc já existe, pulando...\n",
+      "\n",
+      "\n",
+      "2021-12-01 17:24:22 - Trabalhando na cidade: lda\n",
+      "\n",
+      "\n",
+      "Arquivo para a cidade lda já existe, pulando...\n",
       "\n",
       "\n"
      ]
@@ -734,20 +976,140 @@
       "text/html": [
        "<ol>\n",
        "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>NULL</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate}\n",
        "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
+       "\\item NULL\n",
        "\\end{enumerate}\n"
       ],
       "text/markdown": [
        "1. NULL\n",
+       "2. NULL\n",
+       "3. NULL\n",
+       "4. NULL\n",
+       "5. NULL\n",
+       "6. NULL\n",
+       "7. NULL\n",
+       "8. NULL\n",
+       "9. NULL\n",
+       "10. NULL\n",
+       "11. NULL\n",
+       "12. NULL\n",
+       "13. NULL\n",
+       "14. NULL\n",
+       "15. NULL\n",
+       "16. NULL\n",
+       "17. NULL\n",
+       "18. NULL\n",
+       "19. NULL\n",
+       "20. NULL\n",
+       "21. NULL\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "[[1]]\n",
+       "NULL\n",
+       "\n",
+       "[[2]]\n",
+       "NULL\n",
+       "\n",
+       "[[3]]\n",
+       "NULL\n",
+       "\n",
+       "[[4]]\n",
+       "NULL\n",
+       "\n",
+       "[[5]]\n",
+       "NULL\n",
+       "\n",
+       "[[6]]\n",
+       "NULL\n",
+       "\n",
+       "[[7]]\n",
+       "NULL\n",
+       "\n",
+       "[[8]]\n",
+       "NULL\n",
+       "\n",
+       "[[9]]\n",
+       "NULL\n",
+       "\n",
+       "[[10]]\n",
+       "NULL\n",
+       "\n",
+       "[[11]]\n",
+       "NULL\n",
+       "\n",
+       "[[12]]\n",
+       "NULL\n",
+       "\n",
+       "[[13]]\n",
+       "NULL\n",
+       "\n",
+       "[[14]]\n",
+       "NULL\n",
+       "\n",
+       "[[15]]\n",
+       "NULL\n",
+       "\n",
+       "[[16]]\n",
+       "NULL\n",
+       "\n",
+       "[[17]]\n",
+       "NULL\n",
+       "\n",
+       "[[18]]\n",
+       "NULL\n",
+       "\n",
+       "[[19]]\n",
+       "NULL\n",
+       "\n",
+       "[[20]]\n",
+       "NULL\n",
+       "\n",
+       "[[21]]\n",
        "NULL\n"
       ]
      },
@@ -757,8 +1119,8 @@
    ],
    "source": [
     "# Rodar tudo\n",
-    "#renda_de_setor_p_grade(ano = 2019, munis = 'all')\n",
-    "renda_de_setor_p_grade(ano = 2019, munis = 'oco')"
+    "renda_de_setor_p_grade(ano = 2019, munis = 'all')\n",
+    "# renda_de_setor_p_grade(ano = 2019, munis = 'oco')"
    ]
   },
   {
